@@ -10,7 +10,8 @@ Unreleased changes (1.0-dev)
  3. NUTCH-393 - Indexer should handle null documents returned by filters.
     (Eelco Lempsink via ab)
 
-
+ 4. NUTCH-456 - Parse msexcel plugin speedup (Heiko Dietze via siren)
+ 
 
 Release 0.9 - 2007-04-02
 
